Bug 469631 - Cocoa needs a correct combobox/editable menulist widget, r=dao r=josh sr=roc
UltraBlame original commit: cf18a03b9ca86b21f8cad2f6de3e84d27b37bc52

--- a/toolkit/themes/pinstripe/global/menu.css
+++ b/toolkit/themes/pinstripe/global/menu.css
@@ -612,8 +612,6 @@ moz
 appearance
 :
 menuitem
-!
-important
 ;
 -
 moz
@@ -1353,6 +1351,12 @@ mac
 -
 menutextselect
 ;
+background
+-
+color
+:
+Highlight
+;
 }
 /
 *
@@ -1482,6 +1486,71 @@ margin
 0
 !
 important
+;
+}
+/
+*
+:
+:
+:
+:
+:
+menuitems
+in
+editable
+menulist
+popups
+:
+:
+:
+:
+:
+*
+/
+menulist
+[
+editable
+=
+"
+true
+"
+]
+>
+menupopup
+>
+menuitem
+{
+-
+moz
+-
+appearance
+:
+none
+;
+}
+menulist
+[
+editable
+=
+"
+true
+"
+]
+>
+menupopup
+>
+menuitem
+>
+.
+menu
+-
+iconic
+-
+left
+{
+display
+:
+none
 ;
 }
 /
