--- a/toolkit/themes/pinstripe/global/menulist.css
+++ b/toolkit/themes/pinstripe/global/menulist.css
@@ -640,6 +640,7 @@ margin
 :
 2px
 4px
+1px
 ;
 min
 -
@@ -871,257 +872,19 @@ focus
 :
 normal
 ;
-}
-menulist
-[
-editable
-=
-"
-true
-"
-]
->
-.
-menulist
--
-dropmarker
-{
 -
 moz
 -
-border
--
-left
--
-colors
+appearance
 :
-#
-000000
-#
-CCCCCC
-#
-FFFFFF
-;
--
-moz
--
-border
--
-radius
-:
-2px
-;
-}
-menulist
-[
-editable
-=
-"
-true
-"
-]
-[
-open
-=
-"
-true
-"
-]
->
-.
 menulist
 -
-dropmarker
-{
--
-moz
--
-border
--
-left
--
-colors
-:
-#
-000000
-#
-454545
-#
-555555
+textfield
 ;
-}
-.
-menulist
--
-editable
--
-box
-{
 margin
 :
--
-1px
--
-1px
-1px
-0px
-;
-padding
-:
-0
 2px
-;
-border
-:
-1px
-solid
-#
-CCCCCC
-;
-background
--
-color
-:
--
-moz
--
-Field
-;
-color
-:
--
-moz
--
-FieldText
-;
--
-moz
--
-box
--
-align
-:
-center
-;
-}
-menulist
-[
-editable
-=
-"
-true
-"
-]
-[
-focused
-=
-"
-true
-"
-]
->
-.
-menulist
--
-editable
--
-box
-{
--
-moz
--
-border
--
-top
--
-colors
-:
--
-moz
--
-mac
--
-focusring
--
-moz
--
-mac
--
-focusring
-#
-000000
-;
--
-moz
--
-border
--
-right
--
-colors
-:
--
-moz
--
-mac
--
-focusring
--
-moz
--
-mac
--
-focusring
-#
-000000
-;
--
-moz
--
-border
--
-bottom
--
-colors
-:
--
-moz
--
-mac
--
-focusring
--
-moz
--
-mac
--
-focusring
-#
-000000
-;
--
-moz
--
-border
--
-left
--
-colors
-:
--
-moz
--
-mac
--
-focusring
--
-moz
--
-mac
--
-focusring
-#
-000000
+4px
 ;
 }
 html
