--- a/toolkit/themes/pinstripe/global/popup.css
+++ b/toolkit/themes/pinstripe/global/popup.css
@@ -607,6 +607,12 @@ appearance
 :
 menupopup
 ;
+background
+-
+color
+:
+Menu
+;
 }
 menupopup
 >
@@ -661,11 +667,7 @@ none
 padding
 :
 4px
-0px
-4px
-0px
-!
-important
+0
 ;
 }
 /
@@ -778,5 +780,47 @@ min
 width
 :
 0px
+;
+}
+menulist
+[
+editable
+=
+"
+true
+"
+]
+>
+menupopup
+{
+-
+moz
+-
+appearance
+:
+none
+;
+}
+menulist
+[
+editable
+=
+"
+true
+"
+]
+>
+menupopup
+>
+.
+popup
+-
+internal
+-
+box
+{
+padding
+:
+0
 ;
 }
