Bug 348233 - FTP and Gopher index pages are LTR always; r+sr=bzbarsky
UltraBlame original commit: 35d3b66853a86e235fef9c118e8a242686a46182

--- a/toolkit/themes/pinstripe/global/dirListing/dirListing.css
+++ b/toolkit/themes/pinstripe/global/dirListing/dirListing.css
@@ -200,6 +200,17 @@ s
 )
 :
 *
+Ehsan
+Akhgari
+<
+ehsan
+.
+akhgari
+gmail
+.
+com
+>
+*
 *
 Alternatively
 the
@@ -560,6 +571,22 @@ float
 left
 ;
 }
+body
+[
+dir
+=
+"
+rtl
+"
+]
+#
+UI_goUp
+{
+float
+:
+right
+;
+}
 #
 UI_showHidden
 {
@@ -572,6 +599,22 @@ top
 float
 :
 right
+;
+}
+body
+[
+dir
+=
+"
+rtl
+"
+]
+#
+UI_showHidden
+{
+float
+:
+left
 ;
 }
 table
