Bug 1100508: Easily capture about:webrtc page data for a bug reports. r=jib, r=mikedeboer
UltraBlame original commit: 6f9fee1b03d79402749e701798063828432b2281

--- a/toolkit/content/aboutwebrtc/aboutWebrtc.css
+++ b/toolkit/content/aboutwebrtc/aboutWebrtc.css
@@ -1,3 +1,61 @@
+/
+*
+This
+Source
+Code
+Form
+is
+subject
+to
+the
+terms
+of
+the
+Mozilla
+Public
+*
+License
+v
+.
+2
+.
+0
+.
+If
+a
+copy
+of
+the
+MPL
+was
+not
+distributed
+with
+this
+*
+file
+You
+can
+obtain
+one
+at
+http
+:
+/
+/
+mozilla
+.
+org
+/
+MPL
+/
+2
+.
+0
+/
+.
+*
+/
 html
 {
 background
@@ -5,7 +63,7 @@ background
 color
 :
 #
-EDECEB
+edeceb
 ;
 font
 :
@@ -14,8 +72,73 @@ message
 box
 ;
 }
-#
-logs
+.
+controls
+{
+font
+-
+size
+:
+1
+.
+1em
+;
+display
+:
+inline
+-
+block
+;
+margin
+:
+0
+0
+.
+5em
+;
+}
+.
+control
+{
+margin
+:
+0
+.
+5em
+0
+;
+}
+.
+control
+>
+button
+{
+margin
+:
+0
+0
+.
+25em
+;
+}
+.
+message
+>
+p
+{
+margin
+:
+0
+.
+5em
+0
+.
+5em
+;
+}
+.
+log
+p
 {
 font
 -
@@ -23,27 +146,51 @@ family
 :
 monospace
 ;
-}
-.
-peer
+padding
 -
-connections
+left
+:
+2em
+;
+text
+-
+indent
+:
+-
+2em
+;
+margin
+-
+top
+:
+2px
+;
+margin
+-
+bottom
+:
+2px
+;
+}
+#
+content
 {
 padding
 :
+1em
 2em
 ;
 margin
 :
 1em
-0em
+0
 ;
 border
 :
 1px
 solid
 #
-AFACA9
+afaca9
 ;
 border
 -
@@ -61,13 +208,18 @@ scroll
 0
 %
 #
-FFF
+fff
 ;
 }
 .
 peer
 -
 connection
+>
+h3
+.
+log
+>
 h3
 {
 background
@@ -75,27 +227,7 @@ background
 color
 :
 #
-DDD
-;
-cursor
-:
-pointer
-;
-}
-.
-peer
--
-connection
-h3
-span
-:
-last
--
-child
-{
-float
-:
-right
+ddd
 ;
 }
 .
@@ -109,7 +241,7 @@ border
 1px
 solid
 #
-AFACA9
+afaca9
 ;
 padding
 :
@@ -177,16 +309,13 @@ background
 color
 :
 #
-DDD
+ddd
 ;
 }
 .
-pcid
-span
-:
-first
+info
 -
-child
+label
 {
 font
 -
@@ -196,101 +325,62 @@ bold
 ;
 }
 .
-tabs
->
-ul
+section
+-
+ctrl
 {
-list
--
-style
--
-type
-:
-none
-;
 margin
 :
-0
-;
-padding
-:
-3px
-10px
+1em
+1
+.
+5em
 ;
 }
+div
 .
-tabs
-li
+fold
+-
+trigger
+{
+color
+:
+blue
+;
+cursor
+:
+pointer
+;
+}
+media
+screen
+{
+.
+fold
+-
+closed
 {
 display
 :
-inline
-;
-position
-:
-relative
-;
-top
-:
-1px
-;
-padding
-:
-3px
-10px
+none
+!
+important
 ;
 }
-.
-tabs
-li
->
-a
+}
+media
+print
 {
-text
+.
+no
 -
-decoration
+print
+{
+display
 :
 none
-;
-padding
-:
-0
-2em
+!
+important
 ;
 }
-.
-tabs
-li
-.
-active
-{
-background
--
-color
-:
-#
-FFF
-;
-border
-:
-1px
-solid
-#
-AFACA9
-;
-border
--
-bottom
-:
-none
-;
-}
-.
-tabs
-section
-{
-clear
-:
-both
-;
 }
