--- a/browser/devtools/shared/widgets/cubic-bezier.css
+++ b/browser/devtools/shared/widgets/cubic-bezier.css
@@ -85,126 +85,87 @@ cubic
 bezier
 *
 /
-.
-coordinate
--
-plane
+#
+container
 {
-position
+display
 :
-absolute
-;
-line
--
-height
-:
-0
-;
-height
-:
-400px
+flex
 ;
 width
 :
-200px
+410px
+;
+height
+:
+370px
+;
+flex
+-
+direction
+:
+row
+-
+reverse
+;
+overflow
+:
+hidden
 ;
 }
 .
-coordinate
+display
 -
-plane
-:
-before
-.
-coordinate
--
-plane
-:
-after
+wrap
 {
-position
+width
 :
-absolute
-;
-bottom
-:
-25
+50
 %
 ;
-left
-:
-0
-;
-width
+height
 :
 100
 %
 ;
+text
+-
+align
+:
+center
+;
+overflow
+:
+hidden
+;
 }
+/
+*
+Coordinate
+Plane
+*
+/
 .
 coordinate
 -
 plane
-:
-before
 {
-content
+width
 :
-"
-"
+150px
 ;
-border
--
-bottom
+height
 :
-2px
-solid
-;
-transform
-:
-rotate
-(
--
-90deg
-)
-translateY
-(
-2px
-)
-;
-transform
--
-origin
-:
-bottom
-left
-;
-}
-.
-coordinate
--
-plane
-:
-after
-{
-content
-:
-"
-"
-;
-border
--
-top
-:
-2px
-solid
+370px
 ;
 margin
--
-bottom
 :
--
-2px
+0
+auto
+;
+position
+:
+relative
 ;
 }
 .
@@ -300,26 +261,236 @@ cursor
 pointer
 ;
 }
-#
-P1x
-#
-P1y
+.
+display
+-
+wrap
 {
-color
+background
 :
-#
-f08
+repeating
+-
+linear
+-
+gradient
+(
+0deg
+transparent
+rgba
+(
+0
+0
+0
+0
+.
+05
+)
+0
+rgba
+(
+0
+0
+0
+0
+.
+05
+)
+1px
+transparent
+1px
+transparent
+15px
+)
+no
+-
+repeat
+repeating
+-
+linear
+-
+gradient
+(
+90deg
+transparent
+rgba
+(
+0
+0
+0
+0
+.
+05
+)
+0
+rgba
+(
+0
+0
+0
+0
+.
+05
+)
+1px
+transparent
+1px
+transparent
+15px
+)
+no
+-
+repeat
+;
+background
+-
+size
+:
+100
+%
+100
+%
+100
+%
+100
+%
+;
+background
+-
+position
+:
+-
+2px
+5px
+-
+2px
+5px
+;
+-
+moz
+-
+user
+-
+select
+:
+none
 ;
 }
-#
-P2x
-#
-P2y
+.
+theme
+-
+dark
+.
+display
+-
+wrap
 {
-color
+background
 :
-#
-0ab
+repeating
+-
+linear
+-
+gradient
+(
+0deg
+transparent
+rgba
+(
+0
+0
+0
+0
+.
+2
+)
+0
+rgba
+(
+0
+0
+0
+0
+.
+2
+)
+1px
+transparent
+1px
+transparent
+15px
+)
+no
+-
+repeat
+repeating
+-
+linear
+-
+gradient
+(
+90deg
+transparent
+rgba
+(
+0
+0
+0
+0
+.
+2
+)
+0
+rgba
+(
+0
+0
+0
+0
+.
+2
+)
+1px
+transparent
+1px
+transparent
+15px
+)
+no
+-
+repeat
+;
+background
+-
+size
+:
+100
+%
+100
+%
+100
+%
+100
+%
+;
+background
+-
+position
+:
+-
+2px
+5px
+-
+2px
+5px
+;
+-
+moz
+-
+user
+-
+select
+:
+none
 ;
 }
 canvas
@@ -373,60 +544,6 @@ center
 no
 -
 repeat
-repeating
--
-linear
--
-gradient
-(
-transparent
-#
-eee
-0
-#
-eee
-.
-5
-%
-transparent
-.
-5
-%
-transparent
-10
-%
-)
-no
--
-repeat
-repeating
--
-linear
--
-gradient
-(
--
-90deg
-transparent
-#
-eee
-0
-#
-eee
-.
-5
-%
-transparent
-.
-5
-%
-transparent
-10
-%
-)
-no
--
-repeat
 ;
 background
 -
@@ -434,34 +551,15 @@ size
 :
 100
 %
-50
-%
 100
-%
-50
-%
-100
-%
-50
 %
 ;
 background
 -
 position
 :
-25
-%
 0
 0
-;
--
-moz
--
-user
--
-select
-:
-none
 ;
 }
 .
@@ -507,118 +605,14 @@ center
 no
 -
 repeat
-repeating
--
-linear
--
-gradient
-(
-transparent
-rgba
-(
-0
-0
-0
-.
-2
-)
-0
-rgba
-(
-0
-0
-0
-.
-2
-)
-.
-5
-%
-transparent
-.
-5
-%
-transparent
-10
-%
-)
-no
--
-repeat
-repeating
--
-linear
--
-gradient
-(
--
-90deg
-transparent
-rgba
-(
-0
-0
-0
-.
-2
-)
-0
-rgba
-(
-0
-0
-0
-.
-2
-)
-.
-5
-%
-transparent
-.
-5
-%
-transparent
-10
-%
-)
-no
--
-repeat
-;
-background
--
-size
-:
-100
-%
-50
-%
-100
-%
-50
-%
-100
-%
-50
-%
-;
-background
--
-position
-:
-25
-%
-0
-0
 ;
 }
 /
 *
 Timing
-function
-preview
-widget
+Function
+Preview
+Widget
 *
 /
 .
@@ -632,9 +626,17 @@ position
 :
 absolute
 ;
-top
+bottom
 :
-400px
+20px
+;
+right
+:
+27px
+;
+width
+:
+150px
 ;
 }
 .
@@ -666,7 +668,7 @@ index
 ;
 width
 :
-200px
+150px
 ;
 height
 :
@@ -792,7 +794,7 @@ left
 {
 left
 :
-193px
+143px
 ;
 }
 50
@@ -800,7 +802,7 @@ left
 {
 left
 :
-193px
+143px
 ;
 }
 83
@@ -821,4 +823,586 @@ left
 7px
 ;
 }
+}
+/
+*
+Preset
+Widget
+*
+/
+.
+preset
+-
+pane
+{
+width
+:
+50
+%
+;
+height
+:
+100
+%
+;
+border
+-
+right
+:
+1px
+solid
+var
+(
+-
+-
+theme
+-
+splitter
+-
+color
+)
+;
+}
+#
+preset
+-
+categories
+{
+display
+:
+flex
+;
+width
+:
+94
+%
+;
+border
+:
+1px
+solid
+var
+(
+-
+-
+theme
+-
+splitter
+-
+color
+)
+;
+border
+-
+radius
+:
+2px
+;
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+toolbar
+-
+background
+)
+;
+margin
+-
+left
+:
+4px
+;
+margin
+-
+top
+:
+3px
+;
+}
+#
+preset
+-
+categories
+.
+category
+:
+last
+-
+child
+{
+border
+-
+right
+:
+none
+;
+}
+.
+category
+{
+flex
+:
+1
+1
+auto
+;
+padding
+:
+5px
+;
+width
+:
+33
+.
+33
+%
+;
+text
+-
+align
+:
+center
+;
+text
+-
+transform
+:
+capitalize
+;
+border
+-
+right
+:
+1px
+solid
+var
+(
+-
+-
+theme
+-
+splitter
+-
+color
+)
+;
+cursor
+:
+default
+;
+color
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+color
+)
+;
+}
+.
+category
+:
+hover
+{
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+tab
+-
+toolbar
+-
+background
+)
+;
+}
+.
+active
+-
+category
+{
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+selection
+-
+background
+)
+;
+color
+:
+var
+(
+-
+-
+theme
+-
+selection
+-
+color
+)
+;
+}
+.
+active
+-
+category
+:
+hover
+{
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+selection
+-
+background
+)
+;
+}
+#
+preset
+-
+container
+{
+padding
+:
+0px
+;
+width
+:
+100
+%
+;
+height
+:
+331px
+;
+overflow
+-
+y
+:
+scroll
+;
+}
+.
+preset
+-
+list
+{
+display
+:
+none
+;
+}
+.
+active
+-
+preset
+-
+list
+{
+display
+:
+flex
+;
+flex
+-
+wrap
+:
+wrap
+;
+justify
+-
+content
+:
+left
+;
+padding
+-
+left
+:
+4px
+;
+padding
+-
+top
+:
+3px
+;
+}
+.
+preset
+{
+cursor
+:
+pointer
+;
+width
+:
+55px
+;
+margin
+:
+5px
+11px
+0px
+0px
+;
+text
+-
+transform
+:
+capitalize
+;
+text
+-
+align
+:
+center
+;
+}
+.
+preset
+canvas
+{
+display
+:
+block
+;
+border
+:
+1px
+solid
+#
+ccc
+;
+border
+-
+radius
+:
+3px
+;
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+background
+)
+;
+}
+.
+theme
+-
+dark
+.
+preset
+canvas
+{
+border
+-
+color
+:
+#
+444e58
+;
+}
+.
+preset
+p
+{
+text
+-
+align
+:
+center
+;
+font
+-
+size
+:
+0
+.
+9em
+;
+line
+-
+height
+:
+0px
+;
+margin
+:
+2px
+0px
+0px
+0p
+;
+color
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+color
+-
+alt
+)
+;
+}
+.
+active
+-
+preset
+p
+.
+active
+-
+preset
+:
+hover
+p
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+color
+)
+;
+}
+.
+preset
+:
+hover
+canvas
+{
+border
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+selection
+-
+background
+)
+;
+}
+.
+active
+-
+preset
+canvas
+.
+active
+-
+preset
+:
+hover
+canvas
+.
+theme
+-
+dark
+.
+active
+-
+preset
+canvas
+.
+theme
+-
+dark
+.
+preset
+:
+hover
+canvas
+{
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+selection
+-
+background
+-
+semitransparent
+)
+;
+border
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+selection
+-
+background
+)
+;
 }
