--- a/browser/themes/shared/incontentprefs/preferences.inc.css
+++ b/browser/themes/shared/incontentprefs/preferences.inc.css
@@ -951,6 +951,34 @@ right
 important
 ;
 }
+#
+defaultFontSizeLabel
+{
+/
+*
+!
+important
+needed
+to
+override
+common
+!
+important
+rule
+*
+/
+-
+moz
+-
+margin
+-
+start
+:
+4px
+!
+important
+;
+}
 /
 *
 Applications
