Bug 1135435 - Add UI for breakpoint condition throws. r=fitzgen
UltraBlame original commit: 698791e62f5860991aacdca9fb7b2b390850a903

--- a/browser/themes/shared/devtools/debugger.inc.css
+++ b/browser/themes/shared/devtools/debugger.inc.css
@@ -285,6 +285,72 @@ margin
 2px
 ;
 }
+.
+dbg
+-
+breakpoint
+-
+condition
+-
+thrown
+-
+message
+{
+display
+:
+none
+;
+color
+:
+var
+(
+-
+-
+theme
+-
+highlight
+-
+red
+)
+;
+}
+.
+dbg
+-
+breakpoint
+.
+dbg
+-
+breakpoint
+-
+condition
+-
+thrown
+.
+dbg
+-
+breakpoint
+-
+condition
+-
+thrown
+-
+message
+{
+display
+:
+block
+;
+-
+moz
+-
+padding
+-
+start
+:
+0
+;
+}
 /
 *
 Sources
