Use an html instead of a xul progress bar for better perf on Linux (bug 1003664). r=jlongster, f=darktrojan
UltraBlame original commit: 15403c96b0d47275d3f4c3a0fd020ca7c909e385

--- a/browser/devtools/debugger/debugger.css
+++ b/browser/devtools/debugger/debugger.css
@@ -353,3 +353,37 @@ visibility
 hidden
 ;
 }
+#
+source
+-
+progress
+-
+container
+{
+display
+:
+flex
+;
+flex
+-
+flow
+:
+column
+;
+justify
+-
+content
+:
+center
+;
+}
+#
+source
+-
+progress
+{
+flex
+:
+none
+;
+}
