Bug 1139656 - Implement the first pieces of the all-doorhanger install flow for add-ons installed from websites. r=dtownsend
UltraBlame original commit: 37bd20ca096a57932b1bb093f31e0e15033af38b

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -35453,23 +35453,6 @@ addon
 -
 install
 -
-cancelled
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-addon
--
-install
--
 blocked
 "
 ]
@@ -35488,6 +35471,23 @@ addon
 install
 -
 failed
+"
+]
+.
+popup
+-
+notification
+-
+icon
+[
+popupid
+=
+"
+addon
+-
+install
+-
+confirmation
 "
 ]
 .
@@ -35545,63 +35545,43 @@ popup
 -
 notification
 -
-icon
+description
 [
 popupid
 =
 "
-click
--
-to
--
-play
--
-plugins
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-plugins
-/
-pluginBlocked
--
-64
-.
-png
-)
-;
-}
-.
 addon
 -
 progress
+"
+]
+.
+popup
+-
+notification
 -
 description
+[
+popupid
+=
+"
+addon
+-
+install
+-
+confirmation
+"
+]
 {
 width
 :
-350px
+27em
 ;
 max
 -
 width
 :
-350px
+27em
 ;
 }
 .
@@ -35641,50 +35621,82 @@ popup
 -
 progress
 -
-cancel
+meter
+#
+addon
+-
+install
+-
+confirmation
+-
+content
 {
+margin
+-
+top
+:
+1em
+;
+}
+.
+addon
+-
+install
+-
+confirmation
+-
+name
+{
+font
+-
+weight
+:
+bold
+;
 -
 moz
 -
-appearance
-:
-none
-;
-min
--
-height
-:
-16px
-;
-min
--
-width
-:
-16px
-;
-max
--
-height
-:
-16px
-;
-max
--
-width
-:
-16px
-;
-padding
-:
-0
-;
 margin
+-
+start
 :
 0
-1px
-0
-1px
+!
+important
 ;
+/
+*
+override
+default
+label
+margin
+to
+match
+description
+margin
+*
+/
+}
+.
+popup
+-
+notification
+-
+icon
+[
+popupid
+=
+"
+click
+-
+to
+-
+play
+-
+plugins
+"
+]
+{
 list
 -
 style
@@ -35701,76 +35713,13 @@ mozapps
 /
 skin
 /
-downloads
+plugins
 /
-buttons
+pluginBlocked
+-
+64
 .
 png
-)
-;
--
-moz
--
-image
--
-region
-:
-rect
-(
-0px
-16px
-16px
-0px
-)
-;
-}
-.
-popup
--
-progress
--
-cancel
-:
-hover
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0px
-32px
-16px
-16px
-)
-;
-}
-.
-popup
--
-progress
--
-cancel
-:
-active
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0px
-48px
-16px
-32px
 )
 ;
 }
