--- a/toolkit/themes/windows/global/notification.css
+++ b/toolkit/themes/windows/global/notification.css
@@ -403,19 +403,14 @@ popup
 -
 notification
 -
-learnmore
--
-link
-{
-margin
--
-top
+originHost
 :
-1em
-!
-important
-;
-}
+not
+(
+[
+value
+]
+)
 .
 popup
 -
@@ -435,6 +430,42 @@ href
 display
 :
 none
+;
+}
+.
+popup
+-
+notification
+-
+originHost
+{
+margin
+-
+bottom
+:
+.
+3em
+!
+important
+;
+}
+.
+popup
+-
+notification
+-
+learnmore
+-
+link
+{
+margin
+-
+top
+:
+.
+5em
+!
+important
 ;
 }
 .
