--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -9572,24 +9572,6 @@ top
 5px
 ;
 }
-/
-*
-Notification
-popup
-*
-/
-#
-notification
--
-popup
-{
-min
--
-width
-:
-280px
-;
-}
 .
 popup
 -
@@ -9697,23 +9679,6 @@ addon
 -
 install
 -
-cancelled
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-addon
--
-install
--
 blocked
 "
 ]
@@ -9732,6 +9697,23 @@ addon
 install
 -
 failed
+"
+]
+.
+popup
+-
+notification
+-
+icon
+[
+popupid
+=
+"
+addon
+-
+install
+-
+confirmation
 "
 ]
 .
@@ -9782,6 +9764,81 @@ width
 height
 :
 32px
+;
+}
+.
+popup
+-
+notification
+-
+description
+[
+popupid
+=
+"
+addon
+-
+progress
+"
+]
+.
+popup
+-
+notification
+-
+description
+[
+popupid
+=
+"
+addon
+-
+install
+-
+confirmation
+"
+]
+{
+width
+:
+27em
+;
+max
+-
+width
+:
+27em
+;
+}
+.
+popup
+-
+progress
+-
+meter
+{
+margin
+-
+top
+:
+.
+5em
+;
+}
+.
+addon
+-
+install
+-
+confirmation
+-
+name
+{
+font
+-
+weight
+:
+bold
 ;
 }
 .
@@ -9867,135 +9924,6 @@ notification
 64
 .
 png
-)
-;
-}
-.
-addon
--
-progress
--
-description
-{
-width
-:
-350px
-;
-max
--
-width
-:
-350px
-;
-}
-.
-popup
--
-progress
--
-label
-.
-popup
--
-progress
--
-meter
-{
--
-moz
--
-margin
--
-start
-:
-0
-;
--
-moz
--
-margin
--
-end
-:
-0
-;
-}
-.
-popup
--
-progress
--
-cancel
-{
--
-moz
--
-appearance
-:
-none
-;
-background
-:
-transparent
-;
-border
-:
-none
-;
-padding
-:
-0
-;
-margin
-:
-0
-;
--
-moz
--
-margin
--
-start
-:
-5px
-;
-min
--
-height
-:
-0
-;
-min
--
-width
-:
-0
-;
-list
--
-style
--
-image
-:
-url
-(
-"
-moz
--
-icon
-:
-/
-/
-stock
-/
-gtk
--
-cancel
-?
-size
-=
-menu
-"
 )
 ;
 }
