--- a/toolkit/themes/osx/global/notification.css
+++ b/toolkit/themes/osx/global/notification.css
@@ -776,15 +776,48 @@ popup
 -
 notification
 -
+originHost
+:
+not
+(
+[
+value
+]
+)
+.
+popup
+-
+notification
+-
 learnmore
 -
 link
+:
+not
+(
+[
+href
+]
+)
+{
+display
+:
+none
+;
+}
+.
+popup
+-
+notification
+-
+originHost
 {
 margin
 -
-top
+bottom
 :
-1em
+.
+3em
 !
 important
 ;
@@ -820,18 +853,39 @@ notification
 learnmore
 -
 link
-:
-not
-(
-[
-href
-]
-)
 {
-display
+margin
+-
+top
 :
-none
+.
+5em
+!
+important
 ;
+-
+moz
+-
+margin
+-
+start
+:
+0
+!
+important
+;
+/
+*
+override
+default
+label
+margin
+to
+match
+description
+margin
+*
+/
 }
 .
 popup
