--- a/browser/components/loop/content/css/panel.css
+++ b/browser/components/loop/content/css/panel.css
@@ -1075,11 +1075,6 @@ height
 :
 100px
 ;
-padding
-:
-0
-1rem
-;
 }
 .
 rooms
@@ -1101,92 +1096,21 @@ padding
 :
 .
 5rem
-0
+1rem
 ;
 }
 .
 rooms
 >
-div
->
-.
-context
+p
 {
-margin
-:
-.
-5rem
-0
-0
-;
-background
--
-color
-:
-#
-DEEFF7
-;
-border
--
-radius
-:
-3px
-3px
-0
-0
-;
 padding
 :
 .
 5rem
+0
 ;
-}
-.
-rooms
->
-div
->
-.
-context
->
-.
-context
--
-enabled
-{
 margin
--
-bottom
-:
-.
-5rem
-;
-display
-:
-block
-;
-}
-.
-rooms
->
-div
->
-.
-context
->
-.
-context
--
-enabled
->
-input
-{
--
-moz
--
-margin
--
-start
 :
 0
 ;
@@ -1194,148 +1118,7 @@ start
 .
 rooms
 >
-div
->
-.
-context
->
-.
-context
--
-preview
-{
-float
-:
-right
-;
-width
-:
-100px
-;
-max
--
-height
-:
-200px
-;
--
-moz
--
-margin
--
-start
-:
-10px
-;
-margin
--
-bottom
-:
-10px
-;
-}
-body
-[
-dir
-=
-rtl
-]
-.
-rooms
->
-div
->
-.
-context
->
-.
-context
--
-preview
-{
-float
-:
-left
-;
-}
-.
-rooms
->
-div
->
-.
-context
->
-.
-context
--
-preview
-[
-src
-=
-"
-"
-]
-{
-display
-:
-none
-;
-}
-.
-rooms
->
-div
->
-.
-context
->
-.
-context
--
-description
-{
-display
-:
-block
-;
-color
-:
-#
-707070
-;
-}
-.
-rooms
->
-div
->
-.
-context
->
-.
-context
--
-url
-{
-display
-:
-block
-;
-color
-:
-#
-59A1D7
-;
-clear
-:
-both
-;
-}
-.
-rooms
->
-div
+p
 >
 .
 btn
@@ -1354,13 +1137,6 @@ margin
 :
 0
 auto
-.
-5rem
-;
-width
-:
-100
-%
 ;
 padding
 :
@@ -1372,52 +1148,7 @@ border
 -
 radius
 :
-0
-0
 3px
-3px
-;
-}
-/
-*
-Remove
-when
-bug
-1142671
-is
-backed
-out
-.
-*
-/
-.
-rooms
->
-div
->
-:
-not
-(
-.
-context
-)
-+
-.
-btn
-{
-border
--
-radius
-:
-3px
-;
-margin
--
-top
-:
-0
-.
-5rem
 ;
 }
 .
@@ -1466,20 +1197,6 @@ bottom
 solid
 #
 ccc
-;
-margin
--
-left
-:
--
-1rem
-;
-margin
--
-right
-:
--
-1rem
 ;
 }
 .
