Backed out changeset 37bd20ca096a (bug 1139656) for test_blocklistchange.js xpcshell failures. CLOSED TREE
UltraBlame original commit: 6dd5b23f5558daf996798b2a3983a7fd9d4359b6

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -35453,6 +35453,23 @@ addon
 -
 install
 -
+cancelled
+"
+]
+.
+popup
+-
+notification
+-
+icon
+[
+popupid
+=
+"
+addon
+-
+install
+-
 blocked
 "
 ]
@@ -35471,23 +35488,6 @@ addon
 install
 -
 failed
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-addon
--
-install
--
-confirmation
 "
 ]
 .
@@ -35545,43 +35545,63 @@ popup
 -
 notification
 -
-description
+icon
 [
 popupid
 =
 "
-addon
+click
 -
-progress
-"
-]
-.
-popup
+to
 -
-notification
+play
 -
-description
-[
-popupid
-=
-"
-addon
--
-install
--
-confirmation
+plugins
 "
 ]
 {
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+mozapps
+/
+skin
+/
+plugins
+/
+pluginBlocked
+-
+64
+.
+png
+)
+;
+}
+.
+addon
+-
+progress
+-
+description
+{
 width
 :
-27em
+350px
 ;
 max
 -
 width
 :
-27em
+350px
 ;
 }
 .
@@ -35621,82 +35641,50 @@ popup
 -
 progress
 -
-meter
-#
-addon
--
-install
--
-confirmation
--
-content
+cancel
 {
-margin
--
-top
-:
-1em
-;
-}
-.
-addon
--
-install
--
-confirmation
--
-name
-{
-font
--
-weight
-:
-bold
-;
 -
 moz
 -
-margin
+appearance
+:
+none
+;
+min
 -
-start
+height
+:
+16px
+;
+min
+-
+width
+:
+16px
+;
+max
+-
+height
+:
+16px
+;
+max
+-
+width
+:
+16px
+;
+padding
 :
 0
-!
-important
 ;
-/
-*
-override
-default
-label
 margin
-to
-match
-description
-margin
-*
-/
-}
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-click
--
-to
--
-play
--
-plugins
-"
-]
-{
+:
+0
+1px
+0
+1px
+;
 list
 -
 style
@@ -35713,13 +35701,76 @@ mozapps
 /
 skin
 /
-plugins
+downloads
 /
-pluginBlocked
--
-64
+buttons
 .
 png
+)
+;
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0px
+16px
+16px
+0px
+)
+;
+}
+.
+popup
+-
+progress
+-
+cancel
+:
+hover
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0px
+32px
+16px
+16px
+)
+;
+}
+.
+popup
+-
+progress
+-
+cancel
+:
+active
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0px
+48px
+16px
+32px
 )
 ;
 }
