--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -18819,6 +18819,23 @@ addon
 -
 install
 -
+cancelled
+"
+]
+.
+popup
+-
+notification
+-
+icon
+[
+popupid
+=
+"
+addon
+-
+install
+-
 blocked
 "
 ]
@@ -18837,23 +18854,6 @@ addon
 install
 -
 failed
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-addon
--
-install
--
-confirmation
 "
 ]
 .
@@ -18904,88 +18904,6 @@ width
 height
 :
 32px
-;
-}
-.
-popup
--
-notification
--
-description
-[
-popupid
-=
-"
-addon
--
-progress
-"
-]
-.
-popup
--
-notification
--
-description
-[
-popupid
-=
-"
-addon
--
-install
--
-confirmation
-"
-]
-{
-width
-:
-27em
-;
-max
--
-width
-:
-27em
-;
-}
-.
-popup
--
-progress
--
-meter
-#
-addon
--
-install
--
-confirmation
--
-content
-{
-margin
--
-top
-:
-1em
-;
-}
-.
-addon
--
-install
--
-confirmation
--
-name
-{
-font
--
-weight
-:
-bold
 ;
 }
 .
@@ -19071,6 +18989,187 @@ notification
 64
 .
 png
+)
+;
+}
+.
+addon
+-
+progress
+-
+description
+{
+width
+:
+350px
+;
+max
+-
+width
+:
+350px
+;
+}
+.
+popup
+-
+progress
+-
+label
+.
+popup
+-
+progress
+-
+meter
+{
+-
+moz
+-
+margin
+-
+start
+:
+0
+;
+-
+moz
+-
+margin
+-
+end
+:
+0
+;
+}
+.
+popup
+-
+progress
+-
+cancel
+{
+-
+moz
+-
+appearance
+:
+none
+;
+background
+:
+transparent
+;
+border
+:
+none
+;
+padding
+:
+0
+;
+margin
+:
+0
+;
+min
+-
+height
+:
+0
+;
+min
+-
+width
+:
+0
+;
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+mozapps
+/
+skin
+/
+downloads
+/
+downloadButtons
+.
+png
+)
+;
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0px
+32px
+16px
+16px
+)
+;
+}
+.
+popup
+-
+progress
+-
+cancel
+:
+hover
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+16px
+32px
+32px
+16px
+)
+;
+}
+.
+popup
+-
+progress
+-
+cancel
+:
+active
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+32px
+32px
+48px
+16px
 )
 ;
 }
