Bug 1090555 - Fix visited link test in test_animations_omta.html to wait for visited link coloring properly.  r=birtles
This patch contains two changes:
 (1) The addition of refVisitedLink and the use of
     waitForVisitedLinkColoring() on it.
 (2) Changing the URL of the visited lisks (both visitedLink and
     refVisitedLink) from "" to window.top.location.href, since the
     former doesn't work for Android mochitests while it does work on
     Linux mochitest-e10s.

I tested locally that without the patch I get the failures, and with the
patch the failures go away, using:
./mach mochitest-plain --e10s --setpref layers.acceleration.force-enabled=true --setpref layers.offmainthreadcomposition.async-animations=true layout/style/test/test_animations_omta.html

Further, when running (and passing), I checked that
waitForVisitedLinkColoring() does go through one setTimeout cycle.

Also, I tested that if I effectively revert
https://hg.mozilla.org/mozilla-central/rev/d13154302d77 by changing the
third parameter to the GetContext call in
nsStyleSet::ResolveStyleWithReplacement to be nullptr instead of
visitedRuleNode, I get the failure:
TEST-UNEXPECTED-FAIL | layout/style/test/test_animations_omta.html | visited link background color after animation-only flush - got rgb(255, 255, 0), expected rgb(0, 0, 255)
which confirms that the test is still testing what it was designed to
test.

UltraBlame original commit: d96242aad96d97d26030c59b27a34152931afcec

--- a/layout/style/test/test_animations_omta.html
+++ b/layout/style/test/test_animations_omta.html
@@ -1128,7 +1128,7 @@ color
 white
 ;
 }
-#
+.
 visitedLink
 :
 link
@@ -1139,7 +1139,7 @@ color
 :
 yellow
 }
-#
+.
 visitedLink
 :
 visited
@@ -19781,6 +19781,48 @@ function
 )
 {
 var
+isb2g
+=
+SpecialPowers
+.
+Services
+.
+appinfo
+.
+name
+=
+=
+"
+B2G
+"
+;
+if
+(
+isb2g
+)
+{
+todo
+(
+false
+"
+no
+global
+history
+on
+B2G
+;
+can
+'
+t
+run
+test
+"
+)
+;
+return
+;
+}
+var
 div1
 =
 document
@@ -19844,17 +19886,21 @@ setAttribute
 "
 href
 "
-"
-"
+window
+.
+top
+.
+location
+.
+href
 )
 ;
 visitedLink
 .
-setAttribute
+classList
+.
+add
 (
-"
-id
-"
 "
 visitedLink
 "
@@ -19903,6 +19949,45 @@ linear
 1s
 "
 ;
+var
+refVisitedLink
+=
+document
+.
+createElement
+(
+"
+a
+"
+)
+;
+refVisitedLink
+.
+setAttribute
+(
+"
+href
+"
+window
+.
+top
+.
+location
+.
+href
+)
+;
+refVisitedLink
+.
+classList
+.
+add
+(
+"
+visitedLink
+"
+)
+;
 gDisplay
 .
 appendChild
@@ -19917,6 +20002,40 @@ appendChild
 visitedLink
 )
 ;
+gDisplay
+.
+appendChild
+(
+refVisitedLink
+)
+;
+/
+/
+Wait
+for
+visited
+link
+coloring
+.
+yield
+waitForVisitedLinkColoring
+(
+refVisitedLink
+"
+background
+-
+color
+"
+"
+rgb
+(
+0
+0
+255
+)
+"
+)
+;
 /
 /
 Wait
@@ -19924,11 +20043,6 @@ for
 animations
 to
 start
-and
-for
-visited
-link
-coloring
 .
 yield
 waitForPaintsFlushed
@@ -19954,37 +20068,7 @@ color
 "
 )
 ;
-var
-isb2g
-=
-SpecialPowers
-.
-Services
-.
-appinfo
-.
-name
-=
-=
-"
-B2G
-"
-;
-/
-/
-No
-global
-history
-in
-B2G
-.
-(
-isb2g
-?
-todo_is
-:
 is
-)
 (
 bgColor
 "
@@ -20004,39 +20088,6 @@ color
 "
 )
 ;
-if
-(
-isb2g
-)
-{
-/
-/
-The
-above
-failure
-makes
-the
-rest
-of
-the
-test
-pointless
-.
-div1
-.
-remove
-(
-)
-;
-visitedLink
-.
-remove
-(
-)
-;
-return
-;
-}
 advance_clock
 (
 250
@@ -20135,6 +20186,12 @@ remove
 )
 ;
 visitedLink
+.
+remove
+(
+)
+;
+refVisitedLink
 .
 remove
 (
