Bug 1146460 - Fixed ToolboxFullscreenState style. r=jryans
UltraBlame original commit: cd66c01ef6415128d9db9468beb668ddb0321650

--- a/browser/devtools/webide/themes/webide.css
+++ b/browser/devtools/webide/themes/webide.css
@@ -2212,24 +2212,6 @@ devtools
 horizontal
 -
 splitter
-#
-notificationbox
-[
-toolboxfullscreen
-]
->
-#
-deck
-#
-notificationbox
-[
-toolboxfullscreen
-]
->
-#
-deck
->
-iframe
 {
 min
 -
@@ -2242,6 +2224,22 @@ max
 height
 :
 0
+;
+}
+#
+notificationbox
+[
+toolboxfullscreen
+]
+>
+#
+deck
+-
+panels
+{
+display
+:
+none
 ;
 }
 #
