Bug 1137556 - Make the ReadingList sidebar look like other sidebars.  ui-r=mmaslaney, r=florian
UltraBlame original commit: 538dfc749e7344ac907f9e83a6df8e272b63ea54

--- a/browser/themes/linux/readinglist/sidebar.css
+++ b/browser/themes/linux/readinglist/sidebar.css
@@ -73,6 +73,39 @@ sidebar
 inc
 .
 css
+html
+{
+border
+:
+1px
+solid
+ThreeDShadow
+;
+background
+-
+color
+:
+-
+moz
+-
+Field
+;
+color
+:
+-
+moz
+-
+FieldText
+;
+box
+-
+sizing
+:
+border
+-
+box
+;
+}
 .
 item
 {
@@ -84,6 +117,28 @@ padding
 end
 :
 0
+;
+}
+.
+item
+.
+active
+{
+background
+-
+color
+:
+-
+moz
+-
+cellhighlight
+;
+color
+:
+-
+moz
+-
+cellhighlighttext
 ;
 }
 .
