Bug 1090949 - Refactor WebIDE preferences panel style. r=ochameau
UltraBlame original commit: 69b55839ccaf529c05b51d7d800c9b46e416e5e3

--- a/browser/devtools/webide/themes/webide.css
+++ b/browser/devtools/webide/themes/webide.css
@@ -1588,6 +1588,10 @@ preferences
 #
 runtime
 -
+settings
+#
+runtime
+-
 disconnect
 #
 runtime
@@ -1720,6 +1724,26 @@ rect
 runtime
 -
 preferences
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+104px
+462px
+129px
+438px
+)
+}
+#
+runtime
+-
+settings
 {
 -
 moz
