--- a/browser/devtools/webide/themes/deck.css
+++ b/browser/devtools/webide/themes/deck.css
@@ -271,3 +271,50 @@ align
 left
 ;
 }
+li
+{
+list
+-
+style
+:
+none
+;
+padding
+:
+2px
+;
+}
+li
+>
+label
+:
+hover
+{
+background
+-
+color
+:
+rgba
+(
+0
+0
+0
+0
+.
+02
+)
+;
+}
+li
+>
+label
+>
+span
+{
+display
+:
+inline
+-
+block
+;
+}
