--- a/browser/themes/linux/devedition.css
+++ b/browser/themes/linux/devedition.css
@@ -626,3 +626,43 @@ width
 important
 ;
 }
+/
+*
+Prevent
+devedition
+foreground
+color
+from
+seeping
+into
+the
+sidebar
+-
+box
+(
+since
+*
+its
+background
+colors
+aren
+'
+t
+affected
+by
+the
+devedition
+theme
+)
+*
+/
+#
+sidebar
+-
+box
+{
+color
+:
+initial
+;
+}
