--- a/browser/themes/shared/devtools/ruleview.css
+++ b/browser/themes/shared/devtools/ruleview.css
@@ -1232,3 +1232,93 @@ color
 888
 ;
 }
+.
+ruleview
+-
+selectorhighlighter
+{
+background
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+devtools
+/
+vview
+-
+open
+-
+inspector
+.
+png
+"
+)
+no
+-
+repeat
+0
+0
+;
+padding
+-
+left
+:
+16px
+;
+margin
+-
+left
+:
+5px
+;
+cursor
+:
+pointer
+;
+}
+.
+ruleview
+-
+selectorhighlighter
+:
+hover
+{
+background
+-
+position
+:
+-
+32px
+0
+;
+}
+.
+ruleview
+-
+selectorhighlighter
+:
+active
+.
+ruleview
+-
+selectorhighlighter
+.
+highlighted
+{
+background
+-
+position
+:
+-
+16px
+0
+;
+}
