--- a/browser/themes/shared/newtab/newTab.inc.css
+++ b/browser/themes/shared/newtab/newTab.inc.css
@@ -872,6 +872,57 @@ color
 newtab
 -
 suggested
+:
+hover
+{
+color
+:
+#
+588FE4
+;
+border
+:
+1px
+solid
+#
+588FE4
+;
+}
+.
+newtab
+-
+suggested
+[
+active
+]
+{
+background
+-
+color
+:
+rgba
+(
+51
+51
+51
+0
+.
+95
+)
+;
+border
+:
+0
+;
+color
+:
+white
+;
+}
+.
+newtab
+-
+suggested
 {
 background
 -
