Bug 1146373 - Don't resize reader view images in JS. r=Gijs
UltraBlame original commit: 47d3cee563e594e1a4ba818f43c0362e30330d8f

--- a/mobile/android/themes/core/aboutReader.css
+++ b/mobile/android/themes/core/aboutReader.css
@@ -859,84 +859,78 @@ content
 figure
 img
 {
+display
+:
+block
+;
+margin
+-
+left
+:
+auto
+;
+margin
+-
+right
+:
+auto
+;
+}
+/
+*
+Account
+for
+body
+padding
+to
+make
+image
+full
+width
+*
+/
+.
+content
+img
+[
+moz
+-
+reader
+-
+full
+-
+width
+]
+{
+width
+:
+calc
+(
+100
+%
++
+40px
+)
+;
+margin
+-
+left
+:
+-
+20px
+;
+margin
+-
+right
+:
+-
+20px
+;
 max
 -
 width
 :
 none
-!
-important
-;
-height
-:
-auto
-!
-important
-;
-display
-:
-block
-!
-important
-;
-margin
--
-top
-:
-0px
-!
-important
-;
-margin
--
-bottom
-:
-32px
-!
-important
-;
-}
-/
-*
-If
-image
-is
-place
-inside
-one
-of
-these
-blocks
-there
-'
-s
-no
-need
-to
-add
-margin
-at
-the
-bottom
-*
-/
-.
-content
-.
-wp
--
-caption
-img
-.
-content
-figure
-img
-{
-margin
--
-bottom
-:
-0px
 !
 important
 ;
