--- a/toolkit/themes/windows/global/aboutReader.css
+++ b/toolkit/themes/windows/global/aboutReader.css
@@ -707,9 +707,6 @@ content
 p
 .
 content
-img
-.
-content
 code
 .
 content
@@ -726,6 +723,15 @@ ol
 .
 content
 li
+.
+content
+figure
+.
+content
+.
+wp
+-
+caption
 {
 margin
 :
@@ -737,20 +743,67 @@ margin
 }
 .
 content
+p
+>
+img
+:
+only
+-
+child
+.
+content
+p
+>
+a
+:
+only
+-
+child
+>
+img
+:
+only
+-
+child
+.
+content
 .
 wp
 -
 caption
+img
 .
 content
 figure
+img
+{
+display
+:
+block
+;
+}
+.
+content
+img
+[
+moz
+-
+reader
+-
+center
+]
 {
 margin
+-
+left
 :
-0
-30px
-30px
-30px
+auto
+;
+margin
+-
+right
+:
+auto
 ;
 }
 .
