Bug 1066531 - Delay tab switching until content is ready in e10s mode r=mconley,mstange
UltraBlame original commit: 8194018355f69c709cc4a7f9a2a4eb9894a1245d

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -15004,7 +15004,7 @@ button
 not
 (
 [
-selected
+visuallyselected
 ]
 )
 :
@@ -15065,7 +15065,7 @@ button
 not
 (
 [
-selected
+visuallyselected
 ]
 )
 :
@@ -15121,7 +15121,7 @@ button
 not
 (
 [
-selected
+visuallyselected
 ]
 )
 :
@@ -15763,7 +15763,7 @@ alltabs
 -
 item
 [
-selected
+visuallyselected
 =
 "
 true
