--- a/browser/themes/osx/browser-lightweightTheme.css
+++ b/browser/themes/osx/browser-lightweightTheme.css
@@ -132,7 +132,7 @@ background
 -
 start
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -178,7 +178,7 @@ background
 -
 end
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -271,7 +271,7 @@ background
 -
 middle
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -396,7 +396,7 @@ background
 -
 middle
 [
-selected
+visuallyselected
 =
 true
 ]
