--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -26010,7 +26010,7 @@ background
 not
 (
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -26100,7 +26100,7 @@ background
 -
 middle
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -26141,7 +26141,7 @@ background
 -
 start
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -26165,7 +26165,7 @@ background
 -
 end
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -26217,7 +26217,7 @@ background
 -
 end
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -26241,7 +26241,7 @@ background
 -
 start
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -26434,7 +26434,7 @@ tab
 not
 (
 [
-selected
+visuallyselected
 ]
 )
 :
@@ -26500,7 +26500,7 @@ tab
 not
 (
 [
-selected
+visuallyselected
 ]
 )
 :
@@ -26577,7 +26577,7 @@ image
 not
 (
 [
-selected
+visuallyselected
 =
 "
 true
@@ -26638,7 +26638,7 @@ label
 not
 (
 [
-selected
+visuallyselected
 =
 "
 true
@@ -26679,7 +26679,7 @@ tabbrowser
 -
 tab
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -26711,7 +26711,7 @@ tabbrowser
 -
 tab
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -27107,7 +27107,7 @@ middle
 not
 (
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -27324,7 +27324,7 @@ icon
 not
 (
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -27380,7 +27380,7 @@ icon
 not
 (
 [
-selected
+visuallyselected
 =
 true
 ]
