--- a/browser/themes/shared/devedition.inc.css
+++ b/browser/themes/shared/devedition.inc.css
@@ -1777,7 +1777,7 @@ background
 -
 start
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -1791,7 +1791,7 @@ background
 -
 start
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -1817,7 +1817,7 @@ background
 -
 end
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -1831,7 +1831,7 @@ background
 -
 end
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -1851,7 +1851,7 @@ background
 -
 start
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -1865,7 +1865,7 @@ background
 -
 end
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -2748,7 +2748,7 @@ tab
 not
 (
 [
-selected
+visuallyselected
 ]
 )
 :
@@ -2814,7 +2814,7 @@ tab
 not
 (
 [
-selected
+visuallyselected
 ]
 )
 :
@@ -2952,7 +2952,7 @@ tab
 not
 (
 [
-selected
+visuallyselected
 ]
 )
 :
@@ -3133,7 +3133,7 @@ titlechanged
 not
 (
 [
-selected
+visuallyselected
 =
 "
 true
@@ -3246,7 +3246,7 @@ tabbrowser
 -
 tab
 [
-selected
+visuallyselected
 ]
 {
 color
