--- a/toolkit/themes/faststripe/global/tabbox.css
+++ b/toolkit/themes/faststripe/global/tabbox.css
@@ -476,7 +476,7 @@ important
 }
 tab
 [
-selected
+visuallyselected
 =
 "
 true
@@ -563,7 +563,7 @@ rtl
 )
 tab
 [
-selected
+visuallyselected
 =
 "
 true
@@ -601,7 +601,7 @@ radius
 }
 tab
 [
-selected
+visuallyselected
 =
 "
 true
@@ -667,7 +667,7 @@ of
 -
 type
 [
-selected
+visuallyselected
 =
 "
 true
@@ -820,7 +820,7 @@ tab
 -
 bottom
 [
-selected
+visuallyselected
 =
 "
 true
@@ -885,7 +885,7 @@ tab
 -
 bottom
 [
-selected
+visuallyselected
 =
 "
 true
@@ -923,7 +923,7 @@ tab
 -
 bottom
 [
-selected
+visuallyselected
 =
 "
 true
