--- a/toolkit/themes/linux/global/tabbox.css
+++ b/toolkit/themes/linux/global/tabbox.css
@@ -478,7 +478,7 @@ DialogText
 }
 tab
 [
-selected
+visuallyselected
 =
 "
 true
@@ -699,7 +699,7 @@ tab
 -
 bottom
 [
-selected
+visuallyselected
 =
 "
 true
