--- a/toolkit/themes/osx/global/tabbox.css
+++ b/toolkit/themes/osx/global/tabbox.css
@@ -306,7 +306,7 @@ theme
 {
 tab
 [
-selected
+visuallyselected
 =
 "
 true
@@ -626,7 +626,7 @@ tab
 not
 (
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -644,7 +644,7 @@ tab
 not
 (
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -696,7 +696,7 @@ tabs
 >
 tab
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -708,7 +708,7 @@ bottom
 >
 tab
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -903,7 +903,7 @@ type
 not
 (
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -925,7 +925,7 @@ type
 not
 (
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -959,7 +959,7 @@ of
 -
 type
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -977,7 +977,7 @@ of
 -
 type
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -1014,7 +1014,7 @@ tabs
 >
 tab
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -1031,7 +1031,7 @@ bottom
 >
 tab
 [
-selected
+visuallyselected
 =
 true
 ]
