--- a/toolkit/themes/windows/global/tabbox.css
+++ b/toolkit/themes/windows/global/tabbox.css
@@ -559,7 +559,7 @@ important
 }
 tab
 [
-selected
+visuallyselected
 =
 "
 true
@@ -645,7 +645,7 @@ ltr
 )
 tab
 [
-selected
+visuallyselected
 =
 "
 true
@@ -683,7 +683,7 @@ radius
 }
 tab
 [
-selected
+visuallyselected
 =
 "
 true
@@ -745,7 +745,7 @@ of
 -
 type
 [
-selected
+visuallyselected
 =
 "
 true
@@ -919,7 +919,7 @@ tab
 -
 bottom
 [
-selected
+visuallyselected
 =
 "
 true
@@ -980,7 +980,7 @@ tab
 -
 bottom
 [
-selected
+visuallyselected
 =
 "
 true
@@ -1018,7 +1018,7 @@ tab
 -
 bottom
 [
-selected
+visuallyselected
 =
 "
 true
