--- a/browser/themes/osx/devedition.css
+++ b/browser/themes/osx/devedition.css
@@ -788,7 +788,7 @@ close
 -
 button
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -831,7 +831,7 @@ close
 -
 button
 [
-selected
+visuallyselected
 =
 true
 ]
