--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -16145,7 +16145,7 @@ background
 not
 (
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -16235,7 +16235,7 @@ background
 -
 middle
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -16276,7 +16276,7 @@ background
 -
 start
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -16300,7 +16300,7 @@ background
 -
 end
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -16352,7 +16352,7 @@ background
 -
 end
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -16376,7 +16376,7 @@ background
 -
 start
 [
-selected
+visuallyselected
 =
 true
 ]
@@ -16494,7 +16494,7 @@ tab
 not
 (
 [
-selected
+visuallyselected
 ]
 )
 :
@@ -16560,7 +16560,7 @@ tab
 not
 (
 [
-selected
+visuallyselected
 ]
 )
 :
@@ -16634,7 +16634,7 @@ hover
 not
 (
 [
-selected
+visuallyselected
 =
 "
 true
@@ -16809,7 +16809,7 @@ middle
 not
 (
 [
-selected
+visuallyselected
 =
 true
 ]
