Bug 1132301: Part 4 - add a Share Link button in the Loop conversation window to share a room URL via the Social API. r=Standard8
UltraBlame original commit: 0e57fb772be5ffe2628824d30fc562a4cf75e571

--- a/browser/components/loop/content/css/contacts.css
+++ b/browser/components/loop/content/css/contacts.css
@@ -1090,12 +1090,6 @@ item
 .
 icon
 {
-display
-:
-inline
--
-block
-;
 width
 :
 20px
@@ -1118,13 +1112,11 @@ size
 10px
 10px
 ;
-background
+margin
 -
-repeat
+top
 :
-no
--
-repeat
+3px
 ;
 }
 .
