--- a/browser/components/loop/standalone/content/index.html
+++ b/browser/components/loop/standalone/content/index.html
@@ -1860,6 +1860,36 @@ false
 script
 >
 <
+noscript
+>
+<
+img
+src
+=
+"
+img
+/
+logo
+.
+png
+"
+border
+=
+"
+0
+"
+alt
+=
+"
+Logo
+"
+/
+>
+<
+/
+noscript
+>
+<
 /
 body
 >
