--- a/browser/components/loop/content/css/contacts.css
+++ b/browser/components/loop/content/css/contacts.css
@@ -1090,6 +1090,12 @@ item
 .
 icon
 {
+display
+:
+inline
+-
+block
+;
 width
 :
 20px
@@ -1112,11 +1118,13 @@ size
 10px
 10px
 ;
-margin
+background
 -
-top
+repeat
 :
-3px
+no
+-
+repeat
 ;
 }
 .
