--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -414,6 +414,38 @@ searchbar
 )
 ;
 }
+/
+*
+Prevent
+shrinking
+the
+page
+content
+to
+0
+height
+and
+width
+*
+/
+.
+browserStack
+>
+browser
+{
+min
+-
+height
+:
+25px
+;
+min
+-
+width
+:
+25px
+;
+}
 .
 browserStack
 >
