Bug 1148192 - Update pdf.js to version 1.1.24. r=bdahl, r=Mossop CLOSED TREE
UltraBlame original commit: 6e2c2cddd92e289f63d3a5e14fd52327736d2049

--- a/browser/extensions/pdfjs/content/web/viewer.css
+++ b/browser/extensions/pdfjs/content/web/viewer.css
@@ -420,6 +420,25 @@ white
 .
 pdfViewer
 .
+removePageBorders
+.
+page
+{
+margin
+:
+0px
+auto
+10px
+auto
+;
+border
+:
+none
+;
+}
+.
+pdfViewer
+.
 page
 canvas
 {
@@ -10748,27 +10767,6 @@ left
 display
 :
 block
-;
-}
-#
-printContainer
-div
-{
-page
--
-break
--
-after
-:
-always
-;
-page
--
-break
--
-inside
-:
-avoid
 ;
 }
 }
