Bug 824947 - Put the add-on installation progress notification's custom content in <popupnotificationcontent> rather than overriding the anonymous content. r=dtownsend
UltraBlame original commit: 230000accfbef06b7c892f507a03cfcbf7b379fa

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -35584,19 +35584,35 @@ width
 27em
 ;
 }
-.
-popup
+#
+addon
 -
 progress
 -
-label
-.
-popup
+notification
+-
+progresstext
+#
+addon
 -
 progress
 -
-meter
+notification
+-
+progressmeter
 {
+/
+*
+override
+default
+label
+margin
+to
+match
+description
+margin
+*
+/
 -
 moz
 -
@@ -35614,28 +35630,6 @@ margin
 end
 :
 0
-;
-}
-.
-popup
--
-progress
--
-meter
-#
-addon
--
-install
--
-confirmation
--
-content
-{
-margin
--
-top
-:
-1em
 ;
 }
 .
