Bug 1148833 part 3 - Remove nsIFrame::WillReflow and add a non-virtual MarkInReflow method instead that sets NS_FRAME_IN_REFLOW.  Call it at the start of Reflow().  r=roc
UltraBlame original commit: 41c005e9398e95871789aa21bb0f26559320b3d9

--- a/layout/doc/obsolete/layout-internals.html
+++ b/layout/doc/obsolete/layout-internals.html
@@ -587,24 +587,16 @@ process
 along
 with
 the
-WillReflow
-(
-)
-and
 DidReflow
 (
 )
-methods
+method
 that
 get
-called
-before
-and
-after
+calledafter
 the
 reflow
 process
-respectively
 .
 &
 nbsp
