Bug 1142528 - Decrease tappable area for +/- buttons. r=margaret
UltraBlame original commit: fe3c6243c72802cc72399a3483abb851ae3009e2

--- a/mobile/android/themes/core/aboutReader.css
+++ b/mobile/android/themes/core/aboutReader.css
@@ -1858,15 +1858,13 @@ margin
 -
 left
 :
--
-20px
+40px
 ;
 margin
 -
 right
 :
--
-20px
+40px
 ;
 }
 .
@@ -1938,6 +1936,12 @@ size
 24px
 6px
 ;
+margin
+-
+left
+:
+60px
+;
 }
 .
 plus
@@ -1950,6 +1954,12 @@ size
 :
 24px
 24px
+;
+margin
+-
+right
+:
+60px
 ;
 }
 #
