Bug 1148405 - Intermittent Mulet test_garbage_at_end_of_declarations.html,test_value_storage.html. r=smaug
UltraBlame original commit: 82485842ed0fb923544fd079b8186871c66dbb2d

--- a/layout/style/test/test_garbage_at_end_of_declarations.html
+++ b/layout/style/test/test_garbage_at_end_of_declarations.html
@@ -314,6 +314,26 @@ gElement
 .
 style
 ;
+var
+gUnsetValueEnabled
+=
+SpecialPowers
+.
+getBoolPref
+(
+"
+layout
+.
+css
+.
+unset
+-
+value
+.
+enabled
+"
+)
+;
 /
 *
 *
@@ -1178,22 +1198,7 @@ initial
 ;
 if
 (
-SpecialPowers
-.
-getBoolPref
-(
-"
-layout
-.
-css
-.
-unset
--
-value
-.
-enabled
-"
-)
+gUnsetValueEnabled
 )
 test_value
 (
