Bug 1145246, part 3 - Update layout code for the rename of Animatable.getAnimationPlayers() to Animatable.getAnimations(). r=birtles
UltraBlame original commit: 79a60e8922174e674305fbf1ed1fe2811f01b727

--- a/layout/style/test/test_animations_pausing.html
+++ b/layout/style/test/test_animations_pausing.html
@@ -424,18 +424,18 @@ on
 the
 compositor
 var
-player
+animation
 =
 div
 .
-getAnimationPlayers
+getAnimations
 (
 )
 [
 0
 ]
 ;
-player
+animation
 .
 pause
 (
@@ -566,7 +566,7 @@ back
 on
 the
 compositor
-player
+animation
 .
 play
 (
