--- a/browser/themes/shared/customizableui/customizeMode.inc.css
+++ b/browser/themes/shared/customizableui/customizeMode.inc.css
@@ -1467,6 +1467,49 @@ important
 #
 customization
 -
+lwtheme
+-
+button
+>
+.
+box
+-
+inherit
+>
+.
+box
+-
+inherit
+>
+.
+button
+-
+icon
+{
+width
+:
+20px
+;
+height
+:
+20px
+;
+border
+-
+radius
+:
+2px
+;
+background
+-
+size
+:
+contain
+;
+}
+#
+customization
+-
 titlebar
 -
 visibility
